--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "copyright": "Copyright (c) 2013 Jan Nicklas Released under MIT license",
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "0.4.1",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
 		"grunt-closure-tools": "~0.8.3",
+		"grunt-contrib-connect": "*",
     "grunt-replace": "~0.5.1",
     "grunt-explainjs": "",
-    "grunt-bytesize": ""
+    "grunt-bytesize": "",
+    "grunt-casper": ""
   },
   "repository": {
     "type": "git",
