--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "copyright": "Copyright (c) 2013 Jan Nicklas Released under MIT license",
   "devDependencies": {
     "grunt": "0.4.1",
+    "load-grunt-tasks": "~0.1.0",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
 		"grunt-closure-tools": "~0.8.3",
 		"grunt-contrib-connect": "*",
     "grunt-replace": "~0.5.1",
+    "grunt-contrib-sass": "0.5.0",
+    "grunt-contrib-cssmin": "0.6.2",
     "grunt-explainjs": "",
     "grunt-bytesize": "",
     "grunt-casper": ""
