--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: node_js
 node_js:
   - "0.8"
+rvm:
+  - 1.9.3
+  - jruby-19mode
+
 before_install:
+  - gem install sass
   - npm install -g grunt-cli
   - git clone git://github.com/n1k0/casperjs.git ~/casperjs
   - cd ~/casperjs
   - git checkout tags/1.0.2
   - export PATH=$PATH:`pwd`/bin
   - cd -
+  
 before_script:
   - phantomjs --version
   - casperjs --version
+  - ruby --version
+  - sass --version
