--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
-		"grunt-closure-tools": "~0.8.3",
-		"grunt-contrib-connect": "*",
+    "grunt-closure-tools": "~0.8.3",
+    "grunt-contrib-connect": "*",
     "grunt-replace": "~0.5.1",
     "grunt-contrib-sass": "0.5.0",
     "grunt-contrib-cssmin": "0.6.2",
     "grunt-contrib-clean": "0.5.0",
     "grunt-explainjs": "",
     "grunt-bytesize": "",
-    "grunt-casper": ""
+    "grunt-casper": "",
+    "grunt-autoprefixer": "~0.4.0"
   },
   "repository": {
     "type": "git",
