--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grunt-casper": "",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-template": "~0.2.1",
-    "grunt-groundskeeper": "~0.1.6"
+    "grunt-groundskeeper": "~0.1.6",
+    "grunt-contrib-copy": "~0.4.1"
   },
   "repository": {
     "type": "git",
