--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-autoprefixer": "~0.4.0",
     "grunt-template": "~0.2.1",
     "grunt-groundskeeper": "~0.1.6",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "intern": "~1.3.1"
   },
   "repository": {
     "type": "git",
