Update sauceLab key

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,6 @@ node_js:
 rvm:
   - 1.8.7
 
-env:
-  global:
-    # please get your own free key if you want to test yourself
-    - SAUCE_USERNAME: ariaMenu
-    - SAUCE_ACCESS_KEY: ef3d2b4e-b257-40df-a4af-533a5aa2e584
-
 
 before_install:
   - gem install sass
@@ -34,5 +28,8 @@ install:
   - npm install --production
   - cd ../..
 
-# Intern execution
-script: node node_modules/intern/runner.js config=tests/sauceLabs/intern.config.js
+# Test the code
+script:
+  - npm test
+  # please get your own free key if you want to test yourself
+  - SAUCE_USERNAME=ariaMenu SAUCE_ACCESS_KEY=ecd461a4-d549-409e-a7da-40533e8fba93 node node_modules/intern/runner.js config=tests/sauceLabs/intern.config.js
